--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -8,6 +8,9 @@
     <meta name="author" content="Carston Wiebe, Cale Sigerson, Raegan Scheet" />
     <meta name="description" content="Project for Cornhacks 2025 at UNL." />
     <meta name="color-scheme" content="dark" />
+
+    <script src="./deps/p5.js"></script>
+    <script type="module" src="./core.js"></script>
   </head>
   <body>
     <h1>placeholder</h1>
