--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <title>MoonNav</title>
     <meta name="author" content="Carston Wiebe, Cale Sigerson, Raegan Scheet" />
     <meta name="description" content="Project for Cornhacks 2025 at UNL." />
-    <meta name="color-scheme" content="dark" />
+    <!-- <meta name="color-scheme" content="dark" /> -->
 
     <script src="./deps/p5.js"></script>
-    <script type="module" src="./core.js"></script>
+    <script src="./core.js"></script>
   </head>
   <body>
-    <h1>placeholder</h1>
   </body>
 </html>
