put canvas into main div

--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title>MoonNav</title>
-    <meta name="author" content="Carston Wiebe, Cale Sigerson, Raegan Scheet" />
-    <meta name="description" content="Project for Cornhacks 2025 at UNL." />
-    <!-- <meta name="color-scheme" content="dark" /> -->
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <script src="./deps/p5.js"></script>
-    <script src="./core.js"></script>
-  </head>
-  <body>
-  </body>
+  <title>MoonNav</title>
+  <meta name="author" content="Carston Wiebe, Cale Sigerson, Raegan Scheet" />
+  <meta name="description" content="Project for Cornhacks 2025 at UNL." />
+  <!-- <meta name="color-scheme" content="dark" /> -->
+
+  <script src="./deps/p5.js"></script>
+  <script src="./core.js"></script>
+</head>
+
+<body>
+  <div id="main" style="border:1px solid red"></div>
+</body>
+
 </html>
