Font: add moonet font

--- a/index.xhtml
+++ b/index.xhtml
@@ -5,11 +5,11 @@
     <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title>MoonNav</title>
     <meta name="author" content="Carston Wiebe, Cale Sigerson, Raegan Scheet" />
     <meta name="description" content="Project for Cornhacks 2025 at UNL." />
 
     <link type="text/css" rel="stylesheet" href="./styles.css" />
+    <link type="text/css" rel="stylesheet" href="./fonts/fonts.css" />
     <script type="text/javascript" defer="" src="./deps/p5.min.js"></script>
     <script type="text/javascript" defer="" src="./core.js"></script>
 </head>
