--- a/index.xhtml
+++ b/index.xhtml
@@ -25,7 +25,7 @@
   <div id="sidebar">
     <section id="navigation">
       <details>
-        <summary class="subheading">Travel Steps</summary>
+        <summary class="subheading">Travel</summary>
         <div id="nav-entries">
           <div id="current-steps"></div>
           <div class="nav-entry"><button id="add-step">Add Step!</button></div>
@@ -34,13 +34,13 @@
     </section>
     <section id="planets">
       <details>
-        <summary class="subheading">Planet Information</summary>
+        <summary class="subheading">Celestials</summary>
         <div>:3</div>
       </details>
     </section>
     <section id="settings">
       <details>
-        <summary class="subheading">Graph Settings</summary>
+        <summary class="subheading">Settings</summary>
         <div class="setting-container">
           <p>Rotation Speed</p>
           <input type="range" min="1" max="100" value="50" class="slider"/>
