--- a/index.xhtml
+++ b/index.xhtml
@@ -7,18 +7,18 @@
 
   <meta name="application-name" content="Sol Maps" />
   <meta name="author" content="Carston Wiebe, Cale Sigerson, Raegan Scheet" />
-  <meta name="description" content="Solar Map for Planetary Travel" />
+  <meta name="description" content="Solar Map for Planetary Travel." />
 
   <meta property="og:title" content="Sol Maps" />
-  <meta property="og:description" content="Solar Map for Planetary Travel" />
-  <meta property="og:url" content="https://cscheet2.github.io/cornhacks"/>
-  <meta property="og:image" content="/images/logo/moon.ico" />
+  <meta property="og:description" content="Solar Map for Planetary Travel." />
+  <meta property="og:url" content="https://cscheet2.github.io/cornhacks" />
+  <meta property="og:image" content="./images/logo/moon.ico" />
 
   <link type="text/css" rel="stylesheet" href="./styles.css" />
 
-  <link type="image/x-icon" rel="icon" href="/images/logo/moon.ico" />
-  <link rel="apple-touch-icon" href="/images/logo/moon.ico" />
-  <link rel="apple-touch-startup-image" href="/images/logo/moon.ico" />
+  <link type="image/x-icon" rel="icon" href="./images/logo/moon.ico" />
+  <link rel="apple-touch-icon" href="./images/logo/moon.ico" />
+  <link rel="apple-touch-startup-image" href="./images/logo/moon.ico" />
 
   <script type="text/javascript" defer="" src="./deps/p5.min.js"></script>
   <script type="text/javascript" defer="" src="./core.js"></script>
@@ -37,8 +37,8 @@
       <details>
         <summary class="subheading">Travel</summary>
         <div id="nav-entries">
-          <div class="nav-entry"><input id="nav-to" type="text" placeholder="To"/></div>
-          <div class="nav-entry"><input id="nav-from" type="text" placeholder="From"/></div>
+          <div class="nav-entry"><input id="nav-to" type="text" placeholder="To" /></div>
+          <div class="nav-entry"><input id="nav-from" type="text" placeholder="From" /></div>
         </div>
       </details>
     </section>
@@ -53,10 +53,11 @@
         <summary class="subheading">Settings</summary>
         <div class="setting-container">
           <p>Rotation Speed</p>
-          <input type="range" min="1" max="100" value="50" class="slider"/>
+          <input type="range" min="1" max="100" value="50" class="slider" />
         </div>
       </details>
     </section>
   </div>
 </body>
+
 </html>
