--- a/index.xhtml
+++ b/index.xhtml
@@ -14,7 +14,7 @@
   <meta property="og:url" content="https://cscheet2.github.io/cornhacks" />
   <meta property="og:image" content="./images/logo/moon.ico" />
 
-  <link type="text/css" rel="stylesheet" href="./styles.css" />
+  <link type="text/css" rel="stylesheet" href="./style2.css" />
 
   <link type="image/x-icon" rel="icon" href="./images/logo/moon.ico" />
   <link rel="apple-touch-icon" href="./images/logo/moon.ico" />
@@ -26,13 +26,25 @@
 </head>
 
 <body>
-  <nav>
+  <!-- <nav>
     <h1>Sol Maps</h1>
-  </nav>
+  </nav> -->
 
   <main id="canvas-container"></main>
 
-  <div id="sidebar">
+  <details id="information">
+    <summary>Information</summary>
+  </details>
+
+  <details id="settings">
+    <summary>Settings</summary>
+    <div class="setting-container">
+      <p>Rotation Speed</p>
+      <input type="range" min="1" max="100" value="50" class="slider" />
+    </div>
+  </details>
+
+  <!-- <div id="sidebar">
     <section id="navigation">
       <details>
         <summary class="subheading">Travel</summary>
@@ -57,7 +69,7 @@
         </div>
       </details>
     </section>
-  </div>
+  </div> -->
 </body>
 
 </html>
