added title to head

--- a/index.xhtml
+++ b/index.xhtml
@@ -5,6 +5,7 @@
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
+  <title>Sol Maps</title>
   <meta name="application-name" content="Sol Maps" />
   <meta name="author" content="Carston Wiebe, Cale Sigerson, Raegan Scheet" />
   <meta name="description" content="Solar Map for Planetary Travel." />
@@ -26,10 +27,6 @@
 </head>
 
 <body>
-  <!-- <nav>
-    <h1>Sol Maps</h1>
-  </nav> -->
-
   <main id="canvas-container"></main>
 
   <details id="information">
