--- a/index.xhtml
+++ b/index.xhtml
@@ -28,47 +28,20 @@
 <body>
   <main id="canvas-container"></main>
 
-  <!-- <details id="settings">
-    <summary>Settings</summary>
-    <div class="setting-container">
-      <p>Rotation Speed</p>
-      <input type="range" min="1" max="100" value="50" class="slider" />
-    </div>
-  </details> -->
+  <div id="settings" class="pop-up">
+    <img class="pop-up-icon" src="./images/settings.png" alt="Settings icon" />
+    <form id="settings-form">
+      <label for="freeze-time">Freeze time</label>
+      <input type="checkbox" id="freeze-time" />
+    </form>
+  </div>
 
   <div id="information" class="pop-up">
-    <div class="icon">i</div>
+    <img class="pop-up-icon" src="./images/info.png" alt="Info icon" />
     <p>Left click to rotate</p>
     <p>Right click to pan</p>
     <p>Scroll to zoom</p>
   </div>
-
-  <!-- <div id="sidebar">
-    <section id="navigation">
-      <details>
-        <summary class="subheading">Travel</summary>
-        <div id="nav-entries">
-          <div class="nav-entry"><input id="nav-to" type="text" placeholder="To" /></div>
-          <div class="nav-entry"><input id="nav-from" type="text" placeholder="From" /></div>
-        </div>
-      </details>
-    </section>
-    <section id="planets">
-      <details>
-        <summary class="subheading">Celestials</summary>
-        <div>:3</div>
-      </details>
-    </section>
-    <section id="settings">
-      <details>
-        <summary class="subheading">Settings</summary>
-        <div class="setting-container">
-          <p>Rotation Speed</p>
-          <input type="range" min="1" max="100" value="50" class="slider" />
-        </div>
-      </details>
-    </section>
-  </div> -->
 </body>
 
 </html>
