implemented freezing time

--- a/index.xhtml
+++ b/index.xhtml
@@ -13,13 +13,13 @@
   <meta property="og:title" content="Sol Maps" />
   <meta property="og:description" content="Solar Map for Planetary Travel." />
   <meta property="og:url" content="https://cscheet2.github.io/cornhacks" />
-  <meta property="og:image" content="./images/logo/moon.ico" />
+  <meta property="og:image" content="./images/moon.ico" />
 
   <link type="text/css" rel="stylesheet" href="./styles.css" />
 
-  <link type="image/x-icon" rel="icon" href="./images/logo/moon.ico" />
-  <link rel="apple-touch-icon" href="./images/logo/moon.ico" />
-  <link rel="apple-touch-startup-image" href="./images/logo/moon.ico" />
+  <link type="image/x-icon" rel="icon" href="./images/moon.ico" />
+  <link rel="apple-touch-icon" href="./images/moon.ico" />
+  <link rel="apple-touch-startup-image" href="./images/moon.ico" />
 
   <script type="text/javascript" defer="" src="./deps/p5.min.js"></script>
   <script type="text/javascript" defer="" src="./core.js"></script>
